# Legacy-Hardware-Integration-Gateway

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  docker-compose.yml
benchmark/: requirements.txt  test_gateway.py
include/lhig/: legacy_client.hpp  opcua_server.hpp
sim/: legacy_device.py
src/: legacy_client.cpp  main.cpp  opcua_server.cpp
